Fix toast-container z-index

--- a/Frontend/src/css/toast.css
+++ b/Frontend/src/css/toast.css
@@ -47,7 +47,7 @@
 }
 
 .notistack-SnackbarContainer {
-  z-index: 999999999;
+  z-index: 999999999 !important;
 }
 .notistack-Snackbar {
   min-width: 0;
